<resources>
    <string name="app_name" translatable="false">QuickBite Manager</string>
    <string name="slogan">Simplify your management, boost your business</string>
    <string name="application_logo">application logo</string>
    <string name="nav_home">Home</string>
    <string name="nav_orders">Orders</string>
    <string name="nav_inventory">Inventory</string>
    <string name="nav_sales">Sales</string>
    <string name="nav_clients">Clients</string>
    <string name="nav_menu">Menu</string>
    <string name="DashBoard" translatable="false">DashBoard</string>
    <string name="pending_orders">Pending orders</string>
    <string name="sales_day">Sales of the day</string>
    <string name="inv_critical">Critical inventory</string>
    <string name="ing_low">Products with low inventory</string>
    <string name="quick_access">Quick Access</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="Total_sales">Total sales</string>
    <string name="all">All</string>
    <string name="pending">Pending</string>
    <string name="in_preparation">In preparation</string>
    <string name="ready">Ready</string>
    <string name="delivered">Delivered</string>
    <string name="cancelled">Cancelled</string>
    <string name="Order_management">Order management</string>
    <string name="Menu_management">Menu management</string>
    <string name="edit_order">Edit order</string>
    <string name="client_name">Client name</string>
    <string name="select_client">Select client</string>
    <string name="order_type">Order type</string>
    <string name="dine_in">Dine-in</string>
    <string name="Home_delivery">Home delivery</string>
    <string name="Table">Table</string>
    <string name="address">Address</string>
    <string name="info_table">To add more tables, go to options.</string>
    <string name="ordered_dishes">Ordered dishes</string>
    <string name="add_dish">Add dish</string>
    <string name="quantity">Quantity</string>
    <string name="restaurant_menu">Restaurant menu</string>
    <string name="save_order">Save order</string>
    <string name="ins_orders">Click here to start editing the order</string>
    <string name="list_dishes">Menu</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="ingredients">Ingredients</string>
    <string name="actions">Actions</string>
    <string name="edit_dish">Edit dish</string>
    <string name="add_ingredient">Add ingredient</string>
    <string name="save_dish">Save dish</string>
    <string name="list_ingredients">List of ingredients</string>
    <string name="unit">Unit</string>
    <string name="add">Add</string>
    <string name="Added_ingredient">Added ingredient</string>
    <string name="ins_dishes">Press edit to modify the new dish</string>
    <string name="Inventory_management">Inventory management</string>
    <string name="Ingredient_list">Ingredient list</string>
    <string name="edit_ingredient">Edit ingredient</string>
    <string name="critical_quantity">critical quantity</string>
    <string name="save_ingredients">save ingredient</string>
    <string name="ins_ingredients">Press edit to modify the new Ingredient</string>
    <string name="Sales_management">Sales management</string>
    <string name="Total_sold_today">Total sold today</string>
    <string name="Average_ticket">Average ticket</string>
    <string name="Clients_management">Clients Management</string>
    <string name="Client_list">Client list</string>
    <string name="add_client">Add client</string>
    <string name="phone">Phone</string>
    <string name="edit_client">Edit client</string>
    <string name="save_client">Save client</string>
    <string name="email" translatable="false">Email</string>
    <string name="ins_client">Press edit to modify the new Client</string>
    <string name="options">Options</string>
    <string name="dark_theme">Dark theme</string>
    <string name="language">Language</string>
    <string name="n_tables">N° tables</string>
    <string name="help">Help</string>
    <string name="help_center">Help Center</string>
    <string name="FAQ1">How do I create a new order?</string>
    <string name="FAQ1.1">Press the “+” button on the main screen. Then select the products, customer, and press “Save” to register the order.</string>
    <string name="FAQ2">How do I change the app language?</string>
    <string name="FAQ2_1">Go to Options &gt; Language, select one and the app will restart to apply the changes.</string>
    <string name="FAQ3">¿Cómo activo el modo oscuro?</string>
    <string name="FAQ3_1">Desde el menú Opciones activa el modo oscuro.</string>
    <string name="FAQ4">How do I change the app language?</string>
    <string name="FAQ4_1">From Options, select your preferred language.</string>
    <string name="FAQ5">How do I add ingredients?</string>
    <string name="FAQ5_1">Go to Inventory and tap “+” to add a new one.</string>
    <string name="FAQ6">What do the stock colors mean?</string>
    <string name="FAQ6_1">Red: critical, Green: enough stock.</string>
    <string name="FAQ7">Where can I see my daily sales?</string>
    <string name="FAQ7_1">In the Sales screen you’ll find a daily summary.</string>
    <string name="FAQ8">How do I change the number of tables?</string>
    <string name="FAQ8_1">Not yet, but it’s planned for future updates.</string>
    <string name="FAQ9">Where can I see the product ranking?</string>
    <string name="FAQ9_1">At the bottom of the Sales screen.</string>
    <string name="FAQ10">Can I delete a dish?</string>
    <string name="FAQ10_1">Yes, tap the menu on each dish to delete it.</string>
    <string name="need_help">You need help?</string>
    <string name="need_help_text">If you can’t find the answer you’re looking for, don’t hesitate to contact us directly.</string>
    <string name="Contact_support">Contact support</string>
    <string name="support_email" translatable="false">jorgeruadev@gmail.com</string>
    <string name="email_subject">Help with the QuickBite Manager app</string>
    <string name="email_body">Hello, I need help with the following:</string>
    <string name="send_email">Send email...</string>
    <string name="tittle_notification_critical">Ingredients at critical levels!</string>
    <string name="stock_critical_message">%1$d ingredients are below stock level</string>

    <string-array name="rango_de_ventas">
        <item>@string/day</item>
        <item>@string/month</item>
        <item>@string/year</item>
    </string-array>

    <string-array name="list_lenguage">
        <item>English</item>
        <item>Español</item>
    </string-array>

</resources>