<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
        <item android:id="@+id/nav_home"
            android:title="@string/nav_home"
            android:icon="@drawable/ic_home"/>

        <item android:id="@+id/nav_orders"
            android:title="@string/nav_orders"
            android:icon="@drawable/ic_orders"/>

        <item android:id="@+id/nav_inventory"
            android:title="@string/nav_inventory"
            android:icon="@drawable/ic_inventory"
            android:iconTint="@color/black"/>

        <item android:id="@+id/nav_sales"
            android:title="@string/nav_sales"
            android:icon="@drawable/ic_sales"/>

        <item android:id="@+id/nav_menu"
            android:title="@string/nav_menu"
            android:icon="@drawable/ic_menu"/>


</menu>