<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="14dp"
    android:paddingVertical="25dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/edit_order"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/client_name"
        android:textSize="12sp" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/ThemeTextInputEditText"
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:layout_marginBottom="5dp">

        <AutoCompleteTextView
            android:id="@+id/actv_cliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/order_type"
            android:textSize="12sp" />

        <RadioGroup
            android:id="@+id/rg_order_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_dine_in"
                style="@style/StyleRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/dine_in" />

            <RadioButton
                android:id="@+id/rb_home_delivery"
                style="@style/StyleRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Home_delivery" />

        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_order_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/Table" />

        <Spinner
            android:id="@+id/sp_tables"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3" />

        <EditText
            android:id="@+id/et_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/iv_infoTable"
            style="@style/ic_color"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/info_circle_svgrepo_com"
            android:tooltipText="@string/info_table"
            android:visibility="gone" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:text="@string/ordered_dishes"
        android:textSize="12sp" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_orderDish"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_addDish"
        style="@style/ThemeButtom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_dish" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save"
        style="@style/ThemeButtom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_order"/>

</LinearLayout>